# ai-sa-copilot

./: .env.example  .vercelignore  components.json  devbox.json  litellm_config.yaml  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  runbook.md  runbook_1.md  tailwind.config.ts
api/: __init__.py  devbox.json  index.py  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  routes.py  vercel.json
api/agents/: __main__.py  agent_map.py  contexts.py  intermediate_states.py  research_coordinator_agent.py  run_loop.py  runbook_planning_agent.py  runbook_section_writing_agent.py  tools.py  topic_research_agent.py  types.py
api/api/: __init__.py  config.py  index.py
api/api/agents/: __main__.py  agent_factory.py  intermediate_states.py  research_coordinator_agent.py  run_loop.py  runbook_planning_agent.py
api/api/chat/: router.py
api/api/chat/chat/: index.py  router.py  stream_messages.py
api/api/inngest/: cluster_artifacts.py  copy_to_naive_domain.py  crawl_url.py  crawler.py  events.py  index.py  resume_crawl.py  serve.py  tools.py
api/api/lib/: inngest.py  nomic.py  scraper.py
api/api/routes/inngest/: __init__.py  crawler.py  routes.py
api/db/: types.py
api/dev/: __init__.py
api/lib/: config.py  inngest.py  inngest_context.py  logger.py  metadata.py  middleware.py  scraper.py  supabase.py  text_splitter.py
api/lib/agents/: __init__.py  __main__.py  agent_factory.py  agent_map.py  contexts.py  intermediate_context_variables.py  intermediate_states.py  llm.py  naive_rag_agent.py  question_answer_agent.py  research_coordinator_agent.py  run_loop.py  runbook_planning_agent.py  runbook_section_writing_agent.py  tools.py  topic_research_agent.py  types.py
api/lib/cluster/: summarizer.py
api/lib/crawler/: crawler.py
api/lib/db/: types.py
api/lib/scraper/: __init__.py  extractor.py  scraper.py  types.py
api/lib/supabase/: __init__.py  contexts.py  create_client.py
api/routes/chat/: stream_messages.py
api/routes/inngest/: crawler.py  events.py  uncrawled_urls.py
api/scripts/: create_user.py  kickoff_crawling.py  print_access_token.py  send_message.sh  summarize_superbase.py  test.py  test2.py
api/tests/: test_text_splitter.py
app/: .gitignore  devbox.json  globals.css  layout.tsx  next.config.mjs  package-lock.json  package.json
components/: agent-tool-call.tsx  app-sidebar.tsx  block-close-button.tsx  block.tsx  chat-header.tsx  chat-input.tsx  chat.tsx  code-block.tsx  documentation-viewer.tsx  (+13 more)
(+73 files in other folders)
